// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component ProfileHeader renders component when isUserLoggedIn 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 48,
        "marginHorizontal": 32,
        "marginTop": 20,
      },
    ]
  }
>
  <View
    accessible={true}
    focusable={true}
    hitSlop={
      Object {
        "bottom": 12,
        "left": 12,
        "right": 12,
        "top": 12,
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "marginLeft": 0,
        "marginTop": 0,
        "opacity": 1,
      }
    }
    testID="icon-button"
  >
    <Image
      opacity={1}
      resizeMode="contain"
      size={40}
      source={1}
      style={
        Array [
          Object {
            "height": 60,
            "width": 60,
          },
        ]
      }
    />
  </View>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderRadius": 44,
        "flexDirection": "row",
        "height": 80,
        "justifyContent": "center",
        "opacity": 1,
        "width": 142.5,
      }
    }
    testID="coin-button"
  >
    <Image
      resizeMode="contain"
      source={1}
      style={
        Array [
          Object {
            "height": 36,
            "marginRight": 7.5,
            "width": 36,
          },
        ]
      }
    />
    <Text
      alignCenter={false}
      allowFontScaling={true}
      color="#000000"
      fontFamily="MEDIUM"
      isUnderlined={false}
      isUppercase={false}
      maxFontSizeMultiplier={1.3}
      size="XXSMALL"
      style={
        Array [
          Object {
            "color": "#000000",
            "fontFamily": "Calibre-Medium",
            "fontSize": 21,
            "justifyContent": "center",
            "textAlign": "left",
            "textDecorationColor": "#000000",
            "textDecorationLine": "none",
            "textDecorationStyle": "solid",
            "textTransform": "none",
          },
          Object {
            "marginTop": 10.5,
          },
        ]
      }
    >
      0
    </Text>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "#72D59E",
          "borderRadius": 13.5,
          "height": 27,
          "opacity": 1,
          "paddingLeft": 6,
          "paddingTop": 3,
          "position": "absolute",
          "right": -6.75,
          "width": 27,
        }
      }
      testID="coin-button"
    >
      <Text
        alignCenter={false}
        allowFontScaling={false}
        color="#FFFFFF"
        fontFamily="MEDIUM"
        isUnderlined={false}
        isUppercase={false}
        maxFontSizeMultiplier={1.3}
        size="NORMAL"
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontFamily": "Calibre-Medium",
              "fontSize": 30,
              "justifyContent": "center",
              "textAlign": "left",
              "textDecorationColor": "#FFFFFF",
              "textDecorationLine": "none",
              "textDecorationStyle": "solid",
              "textTransform": "none",
            },
          ]
        }
      >
        +
      </Text>
    </View>
  </View>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderRadius": 44,
        "flexDirection": "row",
        "height": 80,
        "justifyContent": "center",
        "opacity": 1,
        "width": 132,
      }
    }
    testID="ticket-button"
  >
    <Image
      resizeMode="contain"
      source={1}
      style={
        Array [
          Object {
            "height": 36,
            "marginRight": 7.5,
            "width": 36,
          },
        ]
      }
    />
    <Text
      alignCenter={false}
      allowFontScaling={true}
      color="#000000"
      fontFamily="MEDIUM"
      isUnderlined={false}
      isUppercase={false}
      maxFontSizeMultiplier={1.3}
      size="XXSMALL"
      style={
        Array [
          Object {
            "color": "#000000",
            "fontFamily": "Calibre-Medium",
            "fontSize": 21,
            "justifyContent": "center",
            "textAlign": "left",
            "textDecorationColor": "#000000",
            "textDecorationLine": "none",
            "textDecorationStyle": "solid",
            "textTransform": "none",
          },
          Object {
            "marginTop": 10.5,
          },
        ]
      }
    >
      0
    </Text>
  </View>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderRadius": 44,
        "flexDirection": "row",
        "height": 80,
        "justifyContent": "center",
        "opacity": 1,
        "width": 132,
      }
    }
    testID="ellipse-button"
  >
    <Text
      alignCenter={false}
      allowFontScaling={true}
      color="#000000"
      fontFamily="MEDIUM"
      isUnderlined={false}
      isUppercase={false}
      maxFontSizeMultiplier={1.3}
      size="XXSMALL"
      style={
        Array [
          Object {
            "color": "#000000",
            "fontFamily": "Calibre-Medium",
            "fontSize": 21,
            "justifyContent": "center",
            "textAlign": "left",
            "textDecorationColor": "#000000",
            "textDecorationLine": "none",
            "textDecorationStyle": "solid",
            "textTransform": "none",
          },
          Object {
            "marginTop": 10.5,
          },
        ]
      }
    >
      VIP 1
    </Text>
    <Image
      resizeMode="contain"
      source={null}
      style={
        Array [
          Object {
            "borderRadius": 225,
            "height": 36,
            "marginLeft": 7.5,
            "width": 36,
          },
        ]
      }
    />
  </View>
</RCTSafeAreaView>
`;

exports[`Component ProfileHeader renders component with back button correctly 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 48,
        "marginHorizontal": 32,
        "marginTop": 20,
      },
    ]
  }
>
  <View
    accessible={true}
    focusable={true}
    hitSlop={
      Object {
        "bottom": 12,
        "left": 12,
        "right": 12,
        "top": 12,
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "marginLeft": 24,
        "marginTop": 0,
        "opacity": 1,
      }
    }
    testID="back-button"
  >
    <Image
      opacity={1}
      resizeMode="contain"
      size={40}
      source={1}
      style={
        Array [
          Object {
            "height": 60,
            "width": 60,
          },
        ]
      }
    />
  </View>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderRadius": 44,
        "flexDirection": "row",
        "height": 80,
        "justifyContent": "center",
        "opacity": 1,
        "width": 142.5,
      }
    }
    testID="coin-button"
  >
    <Image
      resizeMode="contain"
      source={1}
      style={
        Array [
          Object {
            "height": 36,
            "marginRight": 7.5,
            "width": 36,
          },
        ]
      }
    />
    <Text
      alignCenter={false}
      allowFontScaling={true}
      color="#000000"
      fontFamily="MEDIUM"
      isUnderlined={false}
      isUppercase={false}
      maxFontSizeMultiplier={1.3}
      size="XXSMALL"
      style={
        Array [
          Object {
            "color": "#000000",
            "fontFamily": "Calibre-Medium",
            "fontSize": 21,
            "justifyContent": "center",
            "textAlign": "left",
            "textDecorationColor": "#000000",
            "textDecorationLine": "none",
            "textDecorationStyle": "solid",
            "textTransform": "none",
          },
          Object {
            "marginTop": 10.5,
          },
        ]
      }
    >
      0
    </Text>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "#72D59E",
          "borderRadius": 13.5,
          "height": 27,
          "opacity": 1,
          "paddingLeft": 6,
          "paddingTop": 3,
          "position": "absolute",
          "right": -6.75,
          "width": 27,
        }
      }
      testID="coin-button"
    >
      <Text
        alignCenter={false}
        allowFontScaling={false}
        color="#FFFFFF"
        fontFamily="MEDIUM"
        isUnderlined={false}
        isUppercase={false}
        maxFontSizeMultiplier={1.3}
        size="NORMAL"
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontFamily": "Calibre-Medium",
              "fontSize": 30,
              "justifyContent": "center",
              "textAlign": "left",
              "textDecorationColor": "#FFFFFF",
              "textDecorationLine": "none",
              "textDecorationStyle": "solid",
              "textTransform": "none",
            },
          ]
        }
      >
        +
      </Text>
    </View>
  </View>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderRadius": 44,
        "flexDirection": "row",
        "height": 80,
        "justifyContent": "center",
        "opacity": 1,
        "width": 132,
      }
    }
    testID="ticket-button"
  >
    <Image
      resizeMode="contain"
      source={1}
      style={
        Array [
          Object {
            "height": 36,
            "marginRight": 7.5,
            "width": 36,
          },
        ]
      }
    />
    <Text
      alignCenter={false}
      allowFontScaling={true}
      color="#000000"
      fontFamily="MEDIUM"
      isUnderlined={false}
      isUppercase={false}
      maxFontSizeMultiplier={1.3}
      size="XXSMALL"
      style={
        Array [
          Object {
            "color": "#000000",
            "fontFamily": "Calibre-Medium",
            "fontSize": 21,
            "justifyContent": "center",
            "textAlign": "left",
            "textDecorationColor": "#000000",
            "textDecorationLine": "none",
            "textDecorationStyle": "solid",
            "textTransform": "none",
          },
          Object {
            "marginTop": 10.5,
          },
        ]
      }
    >
      0
    </Text>
  </View>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderRadius": 44,
        "flexDirection": "row",
        "height": 80,
        "justifyContent": "center",
        "opacity": 1,
        "width": 132,
      }
    }
    testID="ellipse-button"
  >
    <Text
      alignCenter={false}
      allowFontScaling={true}
      color="#000000"
      fontFamily="MEDIUM"
      isUnderlined={false}
      isUppercase={false}
      maxFontSizeMultiplier={1.3}
      size="XXSMALL"
      style={
        Array [
          Object {
            "color": "#000000",
            "fontFamily": "Calibre-Medium",
            "fontSize": 21,
            "justifyContent": "center",
            "textAlign": "left",
            "textDecorationColor": "#000000",
            "textDecorationLine": "none",
            "textDecorationStyle": "solid",
            "textTransform": "none",
          },
          Object {
            "marginTop": 10.5,
          },
        ]
      }
    >
      VIP 1
    </Text>
    <Image
      resizeMode="contain"
      source={null}
      style={
        Array [
          Object {
            "borderRadius": 225,
            "height": 36,
            "marginLeft": 7.5,
            "width": 36,
          },
        ]
      }
    />
  </View>
</RCTSafeAreaView>
`;

exports[`Component ProfileHeader renders component with profile image correctly 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 48,
        "marginHorizontal": 32,
        "marginTop": 20,
      },
    ]
  }
>
  <View
    accessible={true}
    focusable={true}
    hitSlop={
      Object {
        "bottom": 12,
        "left": 12,
        "right": 12,
        "top": 12,
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "marginLeft": 0,
        "marginTop": 0,
        "opacity": 1,
      }
    }
    testID="icon-button"
  >
    <Image
      opacity={1}
      resizeMode="contain"
      size={40}
      source={1}
      style={
        Array [
          Object {
            "height": 60,
            "width": 60,
          },
        ]
      }
    />
  </View>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderRadius": 44,
        "flexDirection": "row",
        "height": 80,
        "justifyContent": "center",
        "opacity": 1,
        "width": 142.5,
      }
    }
    testID="coin-button"
  >
    <Image
      resizeMode="contain"
      source={1}
      style={
        Array [
          Object {
            "height": 36,
            "marginRight": 7.5,
            "width": 36,
          },
        ]
      }
    />
    <Text
      alignCenter={false}
      allowFontScaling={true}
      color="#000000"
      fontFamily="MEDIUM"
      isUnderlined={false}
      isUppercase={false}
      maxFontSizeMultiplier={1.3}
      size="XXSMALL"
      style={
        Array [
          Object {
            "color": "#000000",
            "fontFamily": "Calibre-Medium",
            "fontSize": 21,
            "justifyContent": "center",
            "textAlign": "left",
            "textDecorationColor": "#000000",
            "textDecorationLine": "none",
            "textDecorationStyle": "solid",
            "textTransform": "none",
          },
          Object {
            "marginTop": 10.5,
          },
        ]
      }
    >
      0
    </Text>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "#72D59E",
          "borderRadius": 13.5,
          "height": 27,
          "opacity": 1,
          "paddingLeft": 6,
          "paddingTop": 3,
          "position": "absolute",
          "right": -6.75,
          "width": 27,
        }
      }
      testID="coin-button"
    >
      <Text
        alignCenter={false}
        allowFontScaling={false}
        color="#FFFFFF"
        fontFamily="MEDIUM"
        isUnderlined={false}
        isUppercase={false}
        maxFontSizeMultiplier={1.3}
        size="NORMAL"
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontFamily": "Calibre-Medium",
              "fontSize": 30,
              "justifyContent": "center",
              "textAlign": "left",
              "textDecorationColor": "#FFFFFF",
              "textDecorationLine": "none",
              "textDecorationStyle": "solid",
              "textTransform": "none",
            },
          ]
        }
      >
        +
      </Text>
    </View>
  </View>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderRadius": 44,
        "flexDirection": "row",
        "height": 80,
        "justifyContent": "center",
        "opacity": 1,
        "width": 132,
      }
    }
    testID="ticket-button"
  >
    <Image
      resizeMode="contain"
      source={1}
      style={
        Array [
          Object {
            "height": 36,
            "marginRight": 7.5,
            "width": 36,
          },
        ]
      }
    />
    <Text
      alignCenter={false}
      allowFontScaling={true}
      color="#000000"
      fontFamily="MEDIUM"
      isUnderlined={false}
      isUppercase={false}
      maxFontSizeMultiplier={1.3}
      size="XXSMALL"
      style={
        Array [
          Object {
            "color": "#000000",
            "fontFamily": "Calibre-Medium",
            "fontSize": 21,
            "justifyContent": "center",
            "textAlign": "left",
            "textDecorationColor": "#000000",
            "textDecorationLine": "none",
            "textDecorationStyle": "solid",
            "textTransform": "none",
          },
          Object {
            "marginTop": 10.5,
          },
        ]
      }
    >
      0
    </Text>
  </View>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderRadius": 44,
        "flexDirection": "row",
        "height": 80,
        "justifyContent": "center",
        "opacity": 1,
        "width": 132,
      }
    }
    testID="ellipse-button"
  >
    <Text
      alignCenter={false}
      allowFontScaling={true}
      color="#000000"
      fontFamily="MEDIUM"
      isUnderlined={false}
      isUppercase={false}
      maxFontSizeMultiplier={1.3}
      size="XXSMALL"
      style={
        Array [
          Object {
            "color": "#000000",
            "fontFamily": "Calibre-Medium",
            "fontSize": 21,
            "justifyContent": "center",
            "textAlign": "left",
            "textDecorationColor": "#000000",
            "textDecorationLine": "none",
            "textDecorationStyle": "solid",
            "textTransform": "none",
          },
          Object {
            "marginTop": 10.5,
          },
        ]
      }
    >
      VIP 1
    </Text>
    <Image
      resizeMode="contain"
      source={null}
      style={
        Array [
          Object {
            "borderRadius": 225,
            "height": 36,
            "marginLeft": 7.5,
            "width": 36,
          },
        ]
      }
    />
  </View>
</RCTSafeAreaView>
`;
